@@ -1,3 +1,8 @@
+2015-05-01  carl  <cth@carlh.net>
+
+	* Don't load image files whose names start with ._ as they
+	are probably OS X resource files.
+
 2015-04-24  Carl Hetherington  <cth@carlh.net>
 
 	* Fix crash on pressing Ctrl+A in some cases (#525).
